header,fonts,img

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,2 +1,3 @@
-$default-font: "roboto-example", sans-serif
-$accent: orange
+$default-font: "OpenSansRegular", sans-serif
+$accent: #a22000
+$bg: #33244f
