--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -32,7 +32,7 @@ body
 	font-size: 16px
 	min-width: 320px
 	position: relative
-	line-height: 1.75
+	line-height: 1.5
 	font-family: $default-font
 	overflow-x: hidden
 	opacity: 1
@@ -41,5 +41,36 @@ body
 	display: block
 	max-width: 100%
 	height: auto
+
+.clearfix
+	clear: both
+
+h1, h2
+	text-transform: uppercase
+	line-height: 1.5
+	text-align: center
+
+h1
+	font-size: 22px
+	font-family: "OpenSansBold", sans-serif
+
+h2
+	margin-top: 0
+	font-size: 15px
+	font-family: "OpenSansSemibold", sans-serif
+
+.header
+	background-color: $bg
+	height: 100vh
+	color: #ffffff
+	img
+		max-width: 100%
+	h1
+		margin: 30px 0 0 0 
+
+
+
+.forma
+	background-color: #FFF
 
 @import "media" // Всегда в конце
