--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,4 +1,8 @@
 @import "_mixins/font-face"
 
-+font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-+font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
++font-face("OpenSansRegular", "../fonts/OpenSansRegular/OpenSansRegular")
++font-face("OpenSansSemiBold", "../fonts/OpenSansSemiBold/OpenSansSemiBold")
++font-face("OpenSansLight", "../fonts/OpenSansLight/OpenSansLight")
++font-face("OpenSansBold", "../fonts/OpenSansBold/OpenSansBold", bold)
+
+
