--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -58,6 +58,9 @@ h2
 	margin-top: 0
 	font-size: 15px
 	font-family: "OpenSansSemibold", sans-serif
+	span
+		padding: 5px
+		background-color: $accent
 
 .header
 	background-color: $bg
@@ -68,9 +71,40 @@ h2
 	h1
 		margin: 30px 0 0 0 
 
+.header_form
+	margin-top: 100px
+	width: 100%
+	border-radius: 10px
+	box-sizing: content-box
+	background-color: #3b2d55
+	background-image: url("../img/Pattern.png")
+	box-shadow: 0px 2px 10px 0px #251a39
+	text-align: center
+	padding: 10px 0 40px
+	p
+		margin: 20px 0 20px
+	span
+		color: #a39db4
+	input
+		outline: none
+		border: none
+		color: $bg
+		background-color: #a39db4
+		padding-left: 10px
+		border-radius: 5px
+		height: 40px
+		width: 300px
+		margin: 5px 0
+	input[type="submit"]
+		background-color: $accent
+		color: #fff
+		font-family: "OpenSansSemibold",sans-serif
+		text-transform: uppercase
+		font-size: 14px
+		box-shadow: 0px 5px #791800
+	input[type="text"]:focus,
+	input[type="email"]:focus
+		background-color: #fff
 
-
-.forma
-	background-color: #FFF
 
 @import "media" // Всегда в конце
