--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -79,7 +79,7 @@ h3
 			background-color: $accent
 
 
-.header_form
+.form
 	margin-top: 100px
 	width: 100%
 	border-radius: 10px
@@ -93,26 +93,30 @@ h3
 		margin: 20px 0 20px
 	span
 		color: #a39db4
-	input
-		outline: none
-		border: none
-		color: $bg
-		background-color: #a39db4
-		padding-left: 10px
-		border-radius: 5px
-		height: 40px
-		width: 300px
-		margin: 5px 0
-	input[type="submit"]
-		background-color: $accent
-		color: #fff
-		font-family: "OpenSansSemibold",sans-serif
-		text-transform: uppercase
-		font-size: 14px
-		box-shadow: 0px 5px #791800
-	input[type="text"]:focus,
-	input[type="email"]:focus
-		background-color: #ececec
+input
+	outline: none
+	border: none
+	color: $bg
+	background-color: #a39db4
+	padding-left: 10px
+	border-radius: 5px
+	height: 40px
+	width: 300px
+	margin: 5px 0
+input[type="submit"]
+	background-color: $accent
+	color: #fff
+	font-family: "OpenSansSemibold",sans-serif
+	text-transform: uppercase
+	font-size: 14px
+	box-shadow: 0px 5px #791800
+	&:hover
+		background-color: #cb2a02
+		transition: ease 0.4s
+input[type="text"]:focus,
+input[type="email"]:focus
+	background-color: #ececec
+	transition: ease 0.4s
 
 .why_meditation
 	background: #fff url(../img/tr.png) no-repeat scroll center top
@@ -131,11 +135,33 @@ h3
 		height: 40px
 
 .author
+	font-family: "OpenSansLight",sans-serif
+	line-height: 1.7
 	padding: 20px 0 30px 0
 	color: #fff
 	background: $bg url(../img/pattern-3.png)
 	img
 		max-width: 100%
 		border-radius: 60px
+	.my_target
+		margin-top: 40px
+		span
+			line-height: 2
+			text-align: center
+			color: #fff
+			background-color: $accent
+			padding: 3px 7px
+	form.button
+		margin-top: 50px
+	input[type="submit"].diplom
+		background: none
+		box-shadow: none
+		border: 1px solid #fff
+		margin-right: 20px
+		&:hover
+			background-color: #FFF
+			color: $bg
+
+
 
 @import "media" // Всегда в конце
